[package]
name = "cts_response_utils"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "^1.1.0"
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.115"
mime = "0.3.17"
axum = "^0.7.5"
